--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "mocha --exit --recursive" ,
+    "_comment": "yukarıdaki test ile cmd ekranında test programı çalıştırılır. exit ile testten sonra devam etme demekdir. recurrsive ise test js dosyası  test kalsörünün altında başka bir kalsorde ise yazılır"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,5 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.0"
   }
 }
