--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
+    "start:dev": "nodemon ./bin/www",
     "test": "mocha --exit --recursive" ,
     "_comment": "yukarıdaki test ile cmd ekranında test programı çalıştırılır. exit ile testten sonra devam etme demekdir. recurrsive ise test js dosyası  test kalsörünün altında başka bir kalsorde ise yazılır"
   },
