--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   10
 before_install:
-  -nmp install
-  -exports NODE_ENV=production
+  nmp install
+  exports NODE_ENV=production
 script:
-  -npm run test
+  npm run test
